--- a/manifest.json
+++ b/manifest.json
@@ -6,32 +6,10 @@
 	"github": "https://github.com/cdes/figma-content-generator-plugin",
   "description": "Figma app plugin for generating placeholder content such as avatars, names, addresses, geo data and more.",
 	"instructions": "Select layers, right click and select 'Fill Faces' or 'Fill Data'.",
-	"updates": [
-    {
-			"version": "0.50.3",
-			"date": "1/19/2019",
-			"notes": "Update for Figma Api changes."
-    },
-    {
-			"version": "0.50.2",
-			"date": "1/16/2019",
-			"notes": "Bug fixes."
-    },
-    {
-			"version": "0.50.1",
-			"date": "1/15/2019",
-			"notes": "Fix bugs and use updated FigmaApi."
-    },
-		{
-			"version": "0.50.0",
-			"date": "12/14/2018",
-			"notes": "First public release."
-		}
-	],
 	"images": [
-		"https://cdes.github.io/figma-content-generator-plugin/screenshots/animation.gif"
+		"screenshots/animation.gif"
 	],
 	"js": [
-		"https://cdes.github.io/figma-content-generator-plugin/dist/js/content-generator.js"
+		"dist/js/content-generator.js"
   ]
 }
